--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -55,10 +55,13 @@
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
+  opacity: 1;
+  transition: opacity 0.3s ease;
 }
 
 .footer__column-link:hover {
   color: #c1c1c1;
+  opacity: 0.7;
 }
 
 .footer__social-icon {
