--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,6 +1,6 @@
 .reservation {
   background-color: #d9e7ff;
-  background-image: url(/images/background_reservation.svg);
+  background-image: url(../images/background_reservation.svg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -19,67 +19,4 @@
 
 .reservation__form {
   margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__label {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  margin: 8px 0 32px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__button {
-  width: 100%;
-  border-radius: 4px;
-  margin-bottom: 32px;
-  border: none;
-  padding: 20px;
-  transition: background-color 0.5s ease;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #1878dc;
-}
-
-.form__button:hover {
-  background-color: #3f96f3;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  gap: 12px;
-  justify-content: center;
 }
